fix(SS-52): implementar atualização de dados do usuário autenticado
